# SpecCheck

./: .gitignore  LICENSE  SpecCheck.cabal  stack.yaml
paperDemos/: BookShop.lhs  Incoherent.lhs  Iterating.lhs  MinimalOperations.lhs  POP2.lhs  bookShop.hs  erlangBooks.erl  incoherent.hs  iterating.lhs  kill-erlang-node.sh  minimalOperations.lhs  pop2.lhs
src/: BiCh.hs  BigExample1.hs  BookShop.hs  BrokerBuyer.hs  BrokerBuyer2.hs  CSpec.hs  Echo.hs  Echo.py  Erlang.hs  IteratingSpecification.hs  MeetingKoen.hs  POP3.hs  POPLSRC.hs  Predicate.hs  RFC937.hs  Regexish.hs  ST.hs  SimpleErlangExample.hs  TODO.md  Typeclasses.hs  bigExample.erl  erlangBookExample.erl  erlangBooks.erl  erlangBooks2.erl  erlangBrokerBuyer.erl  erlangBrokerBuyer2.erl  erlangPOPLExample.erl  inconsistent.hs  simpleErlangExample.erl
