name:                SpecCheck
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/SpecCheck#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ST,
                       Typeclasses,
                       BiCh,
                       CSpec,
                       Predicate,
                       Regexish
  build-depends:       base >= 4.7 && < 5,
                       erlang >= 0.2,
                       QuickCheck,
                       mtl,
                       transformers,
                       deepseq,
                       process,
                       network-simple,
                       bytestring,
                       regex-posix
  default-language:    Haskell2010
